src/ros2_ws/log/build_2024-02-24_14-38-01/pixpubsub/stderr.log
  File "/src/ros2_ws/install/pixpubsub/lib/python3.10/site-packages/pixpubsub/justmove_sub.py", line 123
    for i in range(time)
                        ^
SyntaxError: expected ':'

